style: renames attendant to employee
