# domain/service/service.go
@@ -3,10 +3,10 @@ package service
 import (
 	"context"
 
-	"github.com/c-4u/pinned-attendant/domain/entity"
-	"github.com/c-4u/pinned-attendant/domain/repo"
-	"github.com/c-4u/pinned-attendant/infra/client/kafka/topic"
-	"github.com/c-4u/pinned-attendant/utils"
+	"github.com/c-4u/pinned-employee/domain/entity"
+	"github.com/c-4u/pinned-employee/domain/repo"
+	"github.com/c-4u/pinned-employee/infra/client/kafka/topic"
+	"github.com/c-4u/pinned-employee/utils"
 )
 
 type Service struct {
@@ -19,18 +19,18 @@ func NewService(repo repo.RepoInterface) *Service {
 	}
 }
 
-func (s *Service) CreateAttendant(ctx context.Context, name *string) (*string, error) {
-	attendant, err := entity.NewAttendant(name)
+func (s *Service) CreateEmployee(ctx context.Context, name *string) (*string, error) {
+	employee, err := entity.NewEmployee(name)
 	if err != nil {
 		return nil, err
 	}
 
-	if err = s.Repo.CreateAttendant(ctx, attendant); err != nil {
+	if err = s.Repo.CreateEmployee(ctx, employee); err != nil {
 		return nil, err
 	}
 
 	// TODO: adds retry
-	event, err := entity.NewEvent(attendant)
+	event, err := entity.NewEvent(employee)
 	if err != nil {
 		return nil, err
 	}
@@ -40,19 +40,19 @@ func (s *Service) CreateAttendant(ctx context.Context, name *string) (*string, e
 		return nil, err
 	}
 
-	err = s.Repo.PublishEvent(ctx, utils.PString(topic.NEW_ATTENDANT), utils.PString(string(eMsg)), attendant.ID)
+	err = s.Repo.PublishEvent(ctx, utils.PString(topic.NEW_EMPLOYEE), utils.PString(string(eMsg)), employee.ID)
 	if err != nil {
 		return nil, err
 	}
 
-	return attendant.ID, nil
+	return employee.ID, nil
 }
 
-func (s *Service) FindAttendant(ctx context.Context, attendantID *string) (*entity.Attendant, error) {
-	attendant, err := s.Repo.FindAttendant(ctx, attendantID)
+func (s *Service) FindEmployee(ctx context.Context, employeeID *string) (*entity.Employee, error) {
+	employee, err := s.Repo.FindEmployee(ctx, employeeID)
 	if err != nil {
 		return nil, err
 	}
 
-	return attendant, nil
+	return employee, nil
 }
